initial working version, needs cleanup

--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     },
     "runtime": {
         "arguments": "",
-        "version" : "3.0.2.16"
+        "version" : "v40"
     },
     "shortcut": {
         "company": "CompanyName",
