--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "moment": "^2.9.0"
+    "es6-promise": "^2.0.1",
+    "express": "^4.12.1",
+    "jade": "^1.9.2",
+    "moment": "^2.9.0",
+    "mongodb": "^1.4.32",
+    "socket.io": "^1.3.4"
   }
 }
