--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jade": "^1.9.2",
     "moment": "^2.9.0",
     "mongodb": "^1.4.32",
+    "q": "^1.2.0",
+    "rimraf": "^2.2.8",
     "socket.io": "^1.3.4"
   }
 }
