--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^1.4.32",
     "q": "^1.2.0",
     "rimraf": "^2.2.8",
-    "socket.io": "^1.3.4"
+    "socket.io": "^1.3.4",
+    "underscore": "^1.8.2"
   }
 }
